<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>3.1.4</version>
    </parent>

    <groupId>com.aerospike</groupId>
    <artifactId>spring-data-aerospike-starters</artifactId>
    <version>${revision}</version>

    <name>Spring Data Aerospike Starters</name>
    <description>Autoconfiguration project for Spring Data Aerospike.</description>
    <url>https://github.com/aerospike-community/spring-data-aerospike-starters</url>
    <organization>
        <name>Aerospike Inc.</name>
        <url>https://www.aerospike.com</url>
    </organization>

    <packaging>pom</packaging>

    <modules>
        <module>spring-boot-autoconfigure-data-aerospike</module>
        <module>spring-boot-starter-data-aerospike</module>
        <module>spring-boot-starter-data-aerospike-reactive</module>
        <module>spring-boot-starter-data-aerospike-example</module>
    </modules>

    <properties>
        <revision>0.12.0</revision>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
        <flatten.maven.plugin.version>1.5.0</flatten.maven.plugin.version>

        <spring-data-aerospike.version>4.5.0</spring-data-aerospike.version>
        <aerospike-reactor-client.version>7.0.0</aerospike-reactor-client.version>
        <aerospike-client.version>7.1.0</aerospike-client.version>

        <spring-cloud-starter.version>4.0.4</spring-cloud-starter.version>
    </properties>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>Igor Ermolenko</id>
            <name>Igor Ermolenko</name>
            <email>iiermolenko@playtika.com</email>
            <url>https://www.playtika.com</url>
            <organization>Playtika</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
        <developer>
            <id>Anastasiia Smirnova</id>
            <name>Anastasiia Smirnova</name>
            <email>asmirnova@playtika.com</email>
            <url>https://www.playtika.com</url>
            <organization>Playtika</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/aerospike-community/spring-data-aerospike-starters.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:aerospike-community/spring-data-aerospike-starters.git
        </developerConnection>
        <url>https://github.com/aerospike-community/spring-data-aerospike-starters</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.aerospike</groupId>
                <artifactId>spring-boot-autoconfigure-data-aerospike</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.aerospike</groupId>
                <artifactId>spring-boot-starter-data-aerospike-reactive</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.aerospike</groupId>
                <artifactId>spring-boot-starter-data-aerospike</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.aerospike</groupId>
                <artifactId>spring-data-aerospike</artifactId>
                <version>${spring-data-aerospike.version}</version>
            </dependency>

            <dependency>
                <groupId>com.aerospike</groupId>
                <artifactId>aerospike-reactor-client</artifactId>
                <version>${aerospike-reactor-client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.aerospike</groupId>
                <artifactId>aerospike-client</artifactId>
                <version>${aerospike-client.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-test-support</artifactId>
                <version>${spring-cloud-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-bootstrap</artifactId>
                <version>${spring-cloud-starter.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>spring-libs-snapshot</id>
            <url>https://repo.spring.io/libs-snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doclint>none</doclint>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven.gpg.plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten.maven.plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>bom</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
